// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component with Snapshot Testing shows custom text and image 1`] = `
.c3 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.c3::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.6);
}

.c4 {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.c0 {
  height: 50vh;
  min-height: 50rem;
  max-height: 80rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: white;
  position: relative;
}

.c1 {
  z-index: 1;
  text-align: center;
  max-width: 80vw;
}

.c2 {
  margin-bottom: 2rem;
  font-size: 3rem;
}

@media (orientation:landscape) and (max-height:500px) {
  .c0 {
    max-height: 100vh;
    min-height: 100vh;
    height: 100vh;
  }
}

@media (min-width:400px) {
  .c2 {
    font-size: 4rem;
  }
}

<header
  className="c0"
>
  <div
    className="c1"
  >
    <h1
      className="c2"
    >
      BLOG
    </h1>
  </div>
  <picture
    className="c3"
  >
    <source
      srcSet="/static/images/posts/http://localhost:3000/static/images/posts/1*Wmv8hfi_bTHuHyV5CawnCw.webp"
      type="image/webp"
    />
    <source
      srcSet="/static/images/posts/http://localhost:3000/static/images/posts/1*Wmv8hfi_bTHuHyV5CawnCw.jpg"
      type="image/jpeg"
    />
    <img
      alt=""
      className="c4"
      data-source-url=""
      src="/static/images/posts/http://localhost:3000/static/images/posts/1*Wmv8hfi_bTHuHyV5CawnCw.jpg"
    />
  </picture>
</header>
`;

exports[`Header component with Snapshot Testing shows latest post 1`] = `
.c4 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.c4::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.6);
}

.c5 {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.c3 {
  font-size: 3rem;
}

.c0 {
  height: 50vh;
  min-height: 50rem;
  max-height: 80rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: white;
  position: relative;
}

.c1 {
  z-index: 1;
  text-align: center;
  max-width: 80vw;
}

.c2 {
  margin-bottom: 2rem;
  font-size: 3rem;
}

@media (orientation:landscape) and (max-height:500px) {
  .c0 {
    max-height: 100vh;
    min-height: 100vh;
    height: 100vh;
  }
}

@media (min-width:400px) {
  .c2 {
    font-size: 4rem;
  }
}

<header
  className="c0"
>
  <div
    className="c1"
  >
    <h1
      className="c2"
    >
      Why I'm learning software development
    </h1>
    <h2
      className="c3"
      title="October 2, 2016"
    >
      Posted 
      <span>
        2 years ago
      </span>
    </h2>
  </div>
  <picture
    className="c4"
  >
    <source
      srcSet="/static/images/posts/luke-pamer-5951.webp"
      type="image/webp"
    />
    <source
      srcSet="/static/images/posts/luke-pamer-5951.jpg"
      type="image/jpeg"
    />
    <img
      alt="Taken by Luke Pamer"
      className="c5"
      data-source-url="https://unsplash.com/photos/oUhr-qMTJoc?utm_source=unsplash&utm_medium=referral&utm_content=mcansh_blog"
      src="/static/images/posts/luke-pamer-5951.jpg"
    />
  </picture>
</header>
`;
